--- a/.gitignore
+++ b/.gitignore
@@ -134,7 +134,7 @@ target/
 test-*.txt
 practice-*.txt
 exercise-*.txt
-my-*.txt
+# my-*.txt # Why is this file being ignored? It's supposed to be tracked. 
 # hello.txt # Why is this file being ignored? It's supposed to be tracked. 
 
 # Local hook test files
